// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: absolute;
  right: 25px;
  top: 25px;
  z-index: 1000;
  width: 350px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: hidden;
  cursor: pointer;
  padding: 25px;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with show = true & no type prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: absolute;
  right: 25px;
  top: 25px;
  z-index: 1000;
  width: 350px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
  cursor: pointer;
  padding: 25px;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with show = true & type = apiError 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: absolute;
  right: 25px;
  top: 25px;
  z-index: 1000;
  width: 350px;
  background-color: #FFFFFF;
  border-color: #DC0A0A;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
  cursor: pointer;
  padding: 25px;
}

<div
  className="c0"
  type="apiError"
/>
`;

exports[`renders correctly with show = true & type = apiSuccess 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: absolute;
  right: 25px;
  top: 25px;
  z-index: 1000;
  width: 350px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
  cursor: pointer;
  padding: 25px;
}

<div
  className="c0"
  type="apiSuccess"
/>
`;
